# AdaptSize

./: .gitignore  LICENSE  README.md
AdaptSizeLibrary/: libadaptsize.h
AdaptSizeTuner/: Makefile  adaptsize.c
AdaptSizeVmod/: Makefile.am  README.rst  configure.ac  libtoole  vmod-autoparam.spec
AdaptSizeVmod/src/: Makefile.am  vmod_autoparam.c  vmod_autoparam.vcc
AdaptSizeVmod/src/tests/: test01.vtc
VarnishHitStats/: Makefile  h_options.c  h_options.h  hitratio.c
VarnishOtherStats/: Makefile  otherstats.c
VarnishPatches/: cache_req_fsm.patch  params.patch  vsl_dispatch.patch
